--- a/locales/km.json
+++ b/locales/km.json
@@ -54,6 +54,12 @@
         "description": "វេទិកាមើលឃើញ algorithm អន្តរកម្មដែលត្រូវបានរចនាឡើងដើម្បីជួយអ្នកប្រើប្រាស់យល់ពីរចនាសម្ព័ន្ធទិន្នន័យ និង algorithms តាមរយៈចលនាជំហានម្តងៗ និងការពន្យល់ដែលមើលឃើញ។ ខ្ញុំបានអភិវឌ្ឍន៍គេហទំព័រនេះដោយប្រើ Vibe Coding និង Client-Side Rendering (CSR) ដោយអនុវត្តបច្ចេកទេស frontend ទំនើបដើម្បីបង្កើតបទពិសោធន៍រៀនសូត្ររលូន ឆ្លើយតប និងទាក់ទាញសម្រាប់អ្នកប្រើប្រាស់។",
         "type": "គម្រោងផ្ទាល់ខ្លួន",
         "process": "បានបញ្ចប់"
+      },
+      {
+        "name": "Blog Post",
+        "description": "គឺជាវេទិកាប្រភពធនធានដ៏ទូលំទូលាយសម្រាប់សហគមន៍អ្នកអភិវឌ្ឍន៍កម្មវិធី (Developers) នៅកម្ពុជា។ គេហទំព័រនេះផ្តល់ជូននូវកូដគំរូ (Source Code) ឯកសារបច្ចេកទេស និងឧបករណ៍សម្រាប់អភិវឌ្ឍគេហទំព័រ ក្នុងគោលបំណងលើកកម្ពស់ការចែករំលែកចំណេះដឹង និងពង្រឹងសមត្ថភាពផ្នែកបច្ចេកវិទ្យាឌីជីថលនៅកម្ពុជា។",
+        "type": "គម្រោងផ្ទាល់ខ្លួន",
+        "process": "បានបញ្ចប់"
       }
     ]
   },
