--- a/locales/zh.json
+++ b/locales/zh.json
@@ -54,6 +54,12 @@
         "description": "一个交互式算法可视化平台，旨在通过逐步动画和视觉解释帮助用户理解数据结构和算法。我使用Vibe Coding和客户端渲染(CSR)开发了这个网站，应用现代前端技术为用户创造流畅、响应式和引人入胜的学习体验。",
         "type": "个人项目",
         "process": "已完成"
+      },
+      {
+        "name": "Blog Post",
+        "description": "这是一个专门为柬埔寨开发者社区打造的资源平台。它提供了开源项目代码、技术文档和网页开发工具，旨在促进当地程序员之间的技术交流与知识共享，助力柬埔寨数字化生态系统的发展。",
+        "type": "个人项目",
+        "process": "已完成"
       }
     ]
   },
